@@ -4,14 +4,21 @@ import com.culture_ticket.client.reservation_payment.application.dto.requestDto.
 import com.culture_ticket.client.reservation_payment.application.dto.requestDto.SeatSelectionRequestDto;
 import com.culture_ticket.client.reservation_payment.application.dto.responseDto.CreatePaymentResponseDto;
 import com.culture_ticket.client.reservation_payment.application.dto.responseDto.PaymentResponseDto;
-import com.culture_ticket.client.reservation_payment.application.dto.responseDto.SeatResponse;
 import com.culture_ticket.client.reservation_payment.common.CustomException;
 import com.culture_ticket.client.reservation_payment.common.ErrorType;
+import com.culture_ticket.client.reservation_payment.common.util.RoleValidator;
 import com.culture_ticket.client.reservation_payment.domain.model.Payment;
 import com.culture_ticket.client.reservation_payment.domain.model.SeatPayment;
 import com.culture_ticket.client.reservation_payment.domain.repository.PaymentRepository;
 import com.culture_ticket.client.reservation_payment.domain.repository.SeatPaymentRepository;
+import com.culture_ticket.client.reservation_payment.infrastructure.client.PerformanceClient;
+import com.culture_ticket.client.reservation_payment.infrastructure.client.TicketClient;
+import com.culture_ticket.client.reservation_payment.infrastructure.dto.SeatResponseDto;
+import com.culture_ticket.client.reservation_payment.infrastructure.dto.TicketRequestDto;
+import java.util.ArrayList;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 import java.util.UUID;
 import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
@@ -25,32 +32,36 @@ public class PaymentService {
 
     private final PaymentRepository paymentRepository;
     private final SeatPaymentRepository seatPaymentRepository;
+    private final PerformanceClient performanceClient;
+    private final TicketClient ticketClient;
     private final ReservationService reservationService;
 
     @Transactional
-    public CreatePaymentResponseDto createPayment(Long userId, SeatSelectionRequestDto request) {
+    public CreatePaymentResponseDto createPayment(String userId, String username, String role, SeatSelectionRequestDto request) {
+        RoleValidator.validateIsUser(role);
         // 좌석 유효성 검사
         // 타임 테이블을 통해서 좌석 데이터를 아예 가져와서 좌석 상태랑 존재 여부 확인 ?
-        List<SeatResponse> seats = getSeats(request.getSeatIds());
 
-        List<UUID> invalidSeats = seats.stream()
-            .filter(seat -> !seat.isAvailable())
-            .map(SeatResponse::getSeatId)
-            .toList();
+        List<UUID> seatIds = request.getSeatIds();
+        List<SeatResponseDto> seats = new ArrayList<>();
 
-        if (!invalidSeats.isEmpty()) {
-            // 에러 발생 시 유효하지 않은 좌석 정보 포함 ?
-            throw new CustomException(ErrorType.SEAT_ALREADY_RESERVED);
+        // TODO: 좌석 상태 확인 후 예매 불가 시 에러 추가
+        for (UUID seatId : seatIds) {
+            SeatResponseDto seat = performanceClient.getSeat(seatId).getData();
+            if (seat == null) {
+                throw new CustomException(ErrorType.NOT_FOUND_SEAT); // TODO: 추후 fallback함수로 빼기
+            }
+            seats.add(seat);
         }
 
         // 좌석 금액 가져오기
         Long totalPrice = seats.stream()
-            .mapToLong(SeatResponse::getPrice)
+            .mapToLong(SeatResponseDto::getSeatPrice)
             .sum();
 
         // 결제 생성
         Payment payment = Payment.builder()
-            .userId(userId)
+            .userId(Long.valueOf(userId))
             .totalPrice(totalPrice)
             .build();
 
@@ -58,15 +69,37 @@ public class PaymentService {
 
         // 좌석 결제 생성
         List<SeatPayment> seatPayments = seats.stream()
-            .map(seat -> SeatPayment.builder()
-                .seatId(seat.getSeatId())
-                .payment(savedPayment)
-                .build())
-            .toList();
+            .map(seat -> SeatPayment.of(seat, savedPayment))
+            .collect(Collectors.toList());// 리스트로 수집
         seatPaymentRepository.saveAll(seatPayments);
 
+        // 좌석 예매 불가로 변경
+        performanceClient.
+            updateSeatsStatusAvailable(username, "UNAVAILABLE", request.getSeatIds());
+
         // 예매 생성
-        reservationService.createReservation(new ReservationRequestDto(savedPayment.getId(), userId));
+        UUID reservationId = reservationService.createReservation(
+            new ReservationRequestDto(savedPayment.getId(), Long.valueOf(userId)));
+
+        // 티켓 생성
+        UUID performanceId = performanceClient.getTimeTable(
+            seats.get(0).getTimeTableId()).getData().getPerfomanceId();
+
+        Map<UUID, Long> seatPriceMap = new HashMap<>();
+        for (SeatResponseDto seat : seats) {
+            seatPriceMap.put(seat.getSeatId(), seat.getSeatPrice());
+        }
+
+        for (UUID seatId : seatIds) {
+            Long seatPrice = seatPriceMap.get(seatId);
+            if (seatPrice == null) {
+                throw new CustomException(ErrorType.NOT_FOUND_SEAT_PRICE);
+            }
+            TicketRequestDto ticketRequestDto = TicketRequestDto.
+                of(performanceId, seatId, seatPrice, reservationId);
+            ticketClient.createTicket(userId, username, role, ticketRequestDto);
+        }
+
         return new CreatePaymentResponseDto(totalPrice);
     }
 
@@ -89,20 +122,20 @@ public class PaymentService {
         return new PaymentResponseDto(payment.getId(), payment.getTotalPrice());
     }
 
-    // 더미 좌석 정보 생성
-    private List<SeatResponse> getSeats(List<UUID> seatIds) {
-        List<SeatResponse> dummySeats = List.of(
-            new SeatResponse(UUID.fromString("550e8400-e29b-41d4-a716-446655440000"), "VIP", 100000L,
-                true),
-            new SeatResponse(UUID.fromString("550e8400-e29b-41d4-a716-446655440001"), "Standard",
-                50000L, true),
-            new SeatResponse(UUID.fromString("550e8400-e29b-41d4-a716-446655440002"), "Economy",
-                55000L, true)
-        );
-
-        // 요청한 좌석 ID에 해당하는 좌석만 필터링
-        return dummySeats.stream()
-            .filter(seat -> seatIds.contains(seat.getSeatId()))
-            .toList();
-    }
+//    // 더미 좌석 정보 생성
+//    private List<SeatResponse> getSeats(List<UUID> seatIds) {
+//        List<SeatResponse> dummySeats = List.of(
+//            new SeatResponse(UUID.fromString("550e8400-e29b-41d4-a716-446655440000"), "VIP", 100000L,
+//                true),
+//            new SeatResponse(UUID.fromString("550e8400-e29b-41d4-a716-446655440001"), "Standard",
+//                50000L, true),
+//            new SeatResponse(UUID.fromString("550e8400-e29b-41d4-a716-446655440002"), "Economy",
+//                55000L, true)
+//        );
+//
+//        // 요청한 좌석 ID에 해당하는 좌석만 필터링
+//        return dummySeats.stream()
+//            .filter(seat -> seatIds.contains(seat.getSeatId()))
+//            .toList();
+//    }
 }
